| Summary: | ASTERISK-23074: Crash in ChanIsAvail app | ||
| Reporter: | Kilburn (maddog) | Labels: | |
| Date Opened: | 2013-12-29 21:24:46.000-0600 | Date Closed: | 2013-12-31 16:51:18.000-0600 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_chanisavail |
| Versions: | 12.0.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Gentoo 64bit | Attachments: | ( 0) backtrace.txt ( 1) gdb.txt |
| Description: | I am only using the new pjsip channel driver. Old sip disabled.
I got this line same => n,ChanIsAvail(PJSIP/${ARG1},s) When it executes I get a asterisk crash. If I change to ChanIsAvail(SIP/${ARG1},s) it does not crash. | ||
| Comments: | By: Matt Jordan (mjordan) 2013-12-30 10:03:57.341-0600 Thank you for your bug report. In order to move your issue forward, we require a backtrace[1] from the core file produced after the crash. Also, be sure you have DONT_OPTIMIZE enabled in menuselect within the Compiler Flags section, then: make install After enabling, reproduce the crash, and then execute the backtrace[1] instructions. When complete, attach that file to this issue report. [1] https://wiki.asterisk.org/wiki/display/AST/Getting+a+Backtrace By: Kilburn (maddog) 2013-12-30 15:01:15.127-0600 Back trace attached This is what appears in the console Executing [s@macro-stdexten:11] ChanIsAvail("PJSIP/778-00000002", "PJSIP/776,s") in new stack asterisk: ../src/pjsip-ua/sip_inv.c:2252: pjsip_inv_end_session: Assertion `!"Invalid operation!"' failed. | ||